# code-ros2

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/example_service_rclcpp/lib/example_service_rclcpp/: service_client_01  service_server_01
install/example_service_rclcpp/share/example_service_rclcpp/: local_setup.sh  package.sh
log/: latest_build  latest_list
src/: .gitignore
src/dds/fastdds_ws/: fastrtps.repos
src/demo/demo_ws/src/test_rclcpp/: CMakeLists.txt  package.xml
src/demo2/: run-script.md
src/demo2/basic/: CMakeLists.txt  Makefile  first_ros2_node.cpp  second_ros2_node.py
src/demo2/colcon_test_ws/install/: local_setup.sh  setup.sh
src/demo2/colcon_test_ws/log/: latest_build
src/demo2/demo2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/demo2/demo2_ws/log/: latest_build
src/demo2/demo2_ws/src/example_cpp/: CMakeLists.txt
src/demo2/demo2_ws/src/example_cpp/src/: node_01.cpp  node_03.cpp
src/demo2/demo2_ws/src/example_py/: setup.py
src/demo3/demo3_ws/install/: local_setup.sh  setup.sh
src/demo3/demo3_ws/log/: latest_build
src/demo3/demo3_ws/src/example_interfaces_rclpy/: setup.py
src/demo3/demo3_ws/src/example_ros2_interfaces/: CMakeLists.txt  package.xml
src/demo3/demo3_ws/src/example_service_rclcpp/: CMakeLists.txt  package.xml
src/demo3/demo3_ws/src/example_service_rclpy/: package.xml  setup.py
src/doc/: clash.md  robot.md
src/doc/ssh/: auth.pub.md
src/jupyter/: Ros2.ipynb
src/robot_learn/robot_learn_ws/src/: Readme.md
src/urdf/: demo.xml  desc.md
(+99 files in other folders)
